requirements.txt added and readme updated

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,49 @@
-fastapi
-uvicorn
-SQLAlchemy
+annotated-doc
+annotated-types
+anyio
 asyncpg
+cachetools
+certifi
+charset-normalizer
+click
+colorama
+earthengine-api
+fastapi
+GeoAlchemy2
+google-api-core
+google-api-python-client
+google-auth
+google-auth-httplib2
+google-auth-oauthlib
+google-cloud-core
+google-cloud-storage
+google-crc32c
+google-resumable-media
+googleapis-common-protos
+greenlet
+h11
+httplib2
+idna
+oauthlib
+packaging
+proto-plus
+protobuf
 psycopg2-binary
-geoalchemy2
+pyasn1
+pyasn1_modules
+pydantic
+pydantic_core
+PyJWT
+pyparsing
 python-dotenv
+requests
+requests-oauthlib
+rsa
+sniffio
+SQLAlchemy
+starlette
+typing-inspection
+typing_extensions
+uritemplate
+urllib3
+uvicorn
